Configure JSON for Events